--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,38 @@
       </div>
 
       
-      
+      <div class="todo">
+        <!-- <select id="todoPage">
+            <option value="10">10 each</option>
+            <option value="15">15 each</option>
+            <option value="20">20 each</option>
+        </select> -->
+        <div>
+            <a id="list" href="list.html">Go to List</a>
+        </div>
+        <h1>JS To Do List</h1>
+        <form id="addInput" action="index.html" method="post">
+            <input type="text" id="addText" placeholder="Neeeeeeeew Work">
+            <button id="addBt"><b id="addBtText">ADD</b></button>
+        </form>
+        <form id="searchInput" action="index.html" method="post">
+            <input type="text" id="searchText" placeholder="Keyword">
+            <button id="searchBt"><b id="searchBtText">SEARCH</b></button>
+        </form>
+        <div>
+            <ul id="paging">
+            </ul>
+            <p id="clear">ALL DELETE</p>
+        </div>
+      </div>
+      <div class="done">
+          <h1>JS Done List</h1>
+          <div>
+              <ul id="doneList">
+              </ul>
+          </div>
+      </div>
+     
       
       <div class="sidebar-right pure-u-1 pure-u-md-1-4">
         {%- include sidebar-right.html -%}
@@ -31,6 +62,7 @@
     </div>
 
     <script async src="https://use.fontawesome.com/releases/v5.0.12/js/all.js"></script>
+    <script src="todo.js"></script>
 
     {%- include scroll.html -%}
 
