--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       </div>
 
       
-      <div class="todo">
+      <div class="content pure-u-1 pure-u-md-1-2 todo">
         <!-- <select id="todoPage">
             <option value="10">10 each</option>
             <option value="15">15 each</option>
