--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,11 @@
             <a id="list" href="list.html">Go to List</a>
         </div>
         <h1>JS To Do List</h1>
-        <form id="addInput" action="" method="post">
+        <form id="addInput" action="https://wngus9056.github.io/jstodolist/" method="POST">
             <input type="text" id="addText" placeholder="Neeeeeeeew Work">
             <button id="addBt"><b id="addBtText">ADD</b></button>
         </form>
-        <form id="searchInput" action="" method="post">
+        <form id="searchInput" action="https://wngus9056.github.io/jstodolist/" method="POST">
             <input type="text" id="searchText" placeholder="Keyword">
             <button id="searchBt"><b id="searchBtText">SEARCH</b></button>
         </form>
